@@ -63,7 +63,8 @@ $_MODULE['<{packetery}prestashop>packetery.class_8d826acd449cf54a4ddfd37819e728e
 $_MODULE['<{packetery}prestashop>packetery.class_1097d15ac9e833bc9ee47161243ebc93'] = 'Nepodařilo se zaktualizovat nastavení';
 $_MODULE['<{packetery}prestashop>packetery.class_8ea5600de48afe182f5edb18804e4afc'] = 'Nesprávné heslo API. Výdejní místa není možné zaktualizovat.';
 $_MODULE['<{packetery}prestashop>packetery.class_3a2f7eb090541a1fffae68f276e8d62e'] = 'Heslo API musí být řetězec';
-$_MODULE['<{packetery}prestashop>packetery.class_ab3b1beeac423938ea69874f04a3ab14'] = 'Identifikátor e-shopu musí být řetězec';
+$_MODULE['<{packetery}prestashop>packetery.class_d2cfd13754957b947b1fb129f7f00c4b'] = 'Zadané označení odesílatele neexistuje.';
+$_MODULE['<{packetery}prestashop>packetery.class_1e55c11920d6ebc07255263ae03d4974'] = 'Ověření označení odesílatele selhalo';
 $_MODULE['<{packetery}prestashop>display_order_main_4a93d9164aad959a6abc2de389170ac9'] = 'Zásilkovna';
 $_MODULE['<{packetery}prestashop>display_order_main_914419aa32f04011357d3b604a86d7eb'] = 'Dopravce';
 $_MODULE['<{packetery}prestashop>display_order_main_ee5c5839980b47f1893220655a3de0fb'] = 'Výdejní místo';
@@ -86,7 +87,8 @@ $_MODULE['<{packetery}prestashop>configure_7442e29d7d53e549b78d93c46b8cdcfc'] = 
 $_MODULE['<{packetery}prestashop>configure_f4f70727dc34561dfde1a3c529b6205c'] = 'Nastavení';
 $_MODULE['<{packetery}prestashop>configure_485115c849e2941a8608587cab909927'] = 'Výdejní místa';
 $_MODULE['<{packetery}prestashop>tab_settings_37e31370e4ab230ff6fba12cc6390aff'] = 'Heslo API';
-$_MODULE['<{packetery}prestashop>tab_settings_fae2e363a4593037306af238c882e69b'] = 'Identifikátor e-shopu';
+$_MODULE['<{packetery}prestashop>tab_settings_a4f70091d9d7af3201e79bce9c5f6543'] = 'Označení odesílatele';
+$_MODULE['<{packetery}prestashop>tab_settings_4afd3c4d1ab2de56a330ab46857d3976'] = 'Označení odesílatele najdete najdete v klientské sekci: [1]%s[/1] v poli "označení".';
 $_MODULE['<{packetery}prestashop>tab_settings_1f597c0dada2621a92c1ee79e6b43999'] = 'Formát štítku';
 $_MODULE['<{packetery}prestashop>tab_settings_5df9377515dc5fba190cd021d1807316'] = '1/8 A4, tisk na A4, 8ks/stránka';
 $_MODULE['<{packetery}prestashop>tab_settings_1e5b2eadf83c2678a69f1d4608b673c8'] = '105x35mm A4, tisk na A4, 16ks/stránka';
