@@ -51,3 +51,4 @@
       - Added: information about chosen pickup point to order confirmation, e-mail and history detail
       - Updated: using native configuration storage (https://devdocs.prestashop.com/1.7/modules/creation/#the-configuration-object )
         and removal of packetery_settings table
+      - Added: sender indication validation
